--- a/index.html
+++ b/index.html
@@ -16,17 +16,18 @@
     <a class="navbar-brand" href="#">
         <img src="assets/img/logo_page.jpeg" alt="Logo" class="d-inline-block align-top ms-3 rounded-circle" height="50">
     </a>
+    <h1 class="fs-5 title-color my-auto">AquaSparta</h1>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav ml-auto">
-            <li class="nav-item ms-3"><a class="nav-link" href="#inicio">Inicio</a></li>
-            <li class="nav-item ms-3"><a class="nav-link" href="#productos">Productos</a></li>
-            <li class="nav-item ms-3"><a class="nav-link" href="#ofertas">Ofertas</a></li>
-            <li class="nav-item ms-3"><a class="nav-link" href="#ofertas">Ofertas</a></li>
-            <li class="nav-item ms-3"><a class="nav-link" href="#testimonios">Testimonios</a></li>
-            <li class="nav-item ms-3"><a class="nav-link" href="#contacto">Contacto</a></li>
+            <li class="nav-item ms-3 my-auto"><a class="nav-link" href="#inicio">Inicio</a></li>
+            <li class="nav-item ms-3 my-auto"><a class="nav-link" href="#productos">Productos</a></li>
+            <li class="nav-item ms-3 my-auto"><a class="nav-link" href="#ofertas">Ofertas</a></li>
+            <li class="nav-item ms-3 my-auto"><a class="nav-link" href="#ofertas">Ofertas</a></li>
+            <li class="nav-item ms-3 my-auto"><a class="nav-link" href="#testimonios">Testimonios</a></li>
+            <li class="nav-item ms-3 my-auto"><a class="nav-link" href="#contacto">Contacto</a></li>
         </ul>
     </div>
 </nav>
