--- a/index.html
+++ b/index.html
@@ -4,11 +4,20 @@
     <meta charset="UTF-8">
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+    <!-- Importacion de Fuentes -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Cinzel:wght@400..900&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap" rel="stylesheet">
+    <!-- Fin de importacion -->
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="assets/css/bootstrap.min.css">
     <link rel="stylesheet" href="assets/css/style.css">
     <link rel="stylesheet" href="assets/css/font/bootstrap-icons.min.css">
-    <title>Document</title>
+    <title>AquaSparta</title>
+    <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
 <!-- Navbar -->
@@ -31,31 +40,68 @@
         </ul>
     </div>
 </nav>
+<!-- Seccion Presentacion -->
+<div class="px-4 py-5 my-5 pt-0 pe-0 text-center">
+    <img class="d-block mx-auto mb-4" src="assets/img/logo2.jpeg" alt="" width="107" height="107">
+    <h1 class="display-5 text-body-emphasis title-font">Peces Exoticos</h1>
+    <div class="col-lg-6 mx-auto">
+        <p class="lead mb-4 body-light">Sumérgete en un mundo donde la belleza exótica de los peces se encuentra con la fuerza y disciplina de Esparta. Descubre especies únicas como el Betta "Leónidas" y el Tetra "Artemisa", cada uno con características y cuidados detallados. Nuestra interfaz, inspirada en la estética espartana, te guiará a través de la compra con facilidad. ¡Únete a las filas de AquaSparta y conquista tu propio imperio submarino!</p>
+        <div class="d-grid gap-2 d-sm-flex justify-content-sm-center">
+            <a href="https://www.youtube.com/watch?v=j3hOd7u35no" target="_blank" ><button type="button" class="btn btn-primary btn-lg px-4 gap-3 button-principal">¡Compra Aquí!</button></a>
+            <button type="button" class="btn btn-outline-secondary btn-lg px-4">Preguntas Frecuentes</button>
+        </div>
+    </div>
+</div>
 
 <!-- Sección Inicio -->
-<section id="inicio" class="container mt-5">
-    <div id="inicioCarousel" class="carousel slide" data-ride="carousel">
-        <div class="carousel-inner">
-            <div class="carousel-item active">
-                <img src="https://via.placeholder.com/1200x400" class="d-block w-100" alt="Peces 1">
+
+<section id="inicio" class="container mt-5 pt-0">
+    <h1 class="display-3 fs-1 text-body-emphasis title-font text-center">Tenemos</h1>
+    <div class="d-flex justify-content-center">
+        <div id="carouselExampleCaptions" class="carousel slide w-80">
+            <div class="carousel-indicators">
+                <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+                <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
+                <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
             </div>
-            <div class="carousel-item">
-                <img src="https://via.placeholder.com/1200x400" class="d-block w-100" alt="Peces 2">
+            <div class="carousel-inner">
+                <div class="carousel-item active">
+                    <img src="assets/img/pecera.webp" class="d-block w-100 rounded-3" alt="...">
+                    <div class="shadow-overlay"></div>
+                    <div class="carousel-caption d-none d-md-block">
+                        <h5 class="carrusel-text">Peceras</h5>
+                        <p class="carrusel-text">Transforma tu hogar en un santuario espartano con una pecera que refleje la fuerza y la disciplina de estos legendarios guerreros.</p>
+                    </div>
+                </div>
+                <div class="carousel-item">
+                    <img src="assets/img/pecera2.webp" class="d-block w-100 rounded-3" alt="...">
+                    <div class="shadow-overlay"></div>
+                    <div class="carousel-caption d-none d-md-block">
+                        <h5 class="carrusel-text">Peces Exoticos</h5>
+                        <p class="carrusel-text">Adorna tu reino acuático con peces exóticos, dignos de la admiración de los dioses del Olimpo y la envidia de los reyes de Esparta.</p>
+                    </div>
+                </div>
+                <div class="carousel-item">
+                    <img src="assets/img/pecera3.webp" class="d-block w-100 rounded-3" alt="...">
+                    <div class="shadow-overlay"></div>
+                    <div class="carousel-caption d-none d-md-block">
+                        <h5 class="carrusel-text">Decoraciones</h5>
+                        <p class="carrusel-text">Convierte tu pecera en un campo de batalla submarino con decoraciones que evoquen la gloria de Esparta, desde ruinas antiguas hasta escudos y lanzas.</p>
+                    </div>
+                </div>
             </div>
-            <div class="carousel-item">
-                <img src="https://via.placeholder.com/1200x400" class="d-block w-100" alt="Peces 3">
-            </div>
+            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Previous</span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Next</span>
+            </button>
         </div>
-        <a class="carousel-control-prev" href="#inicioCarousel" role="button" data-slide="prev">
-            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-            <span class="sr-only">Anterior</span>
-        </a>
-        <a class="carousel-control-next" href="#inicioCarousel" role="button" data-slide="next">
-            <span class="carousel-control-next-icon" aria-hidden="true"></span>
-            <span class="sr-only">Siguiente</span>
-        </a>
     </div>
 </section>
+
 
 <!-- Sección Productos -->
 <section id="productos" class="container mt-5">
