aquasparta: Add more sections

--- a/index.html
+++ b/index.html
@@ -41,17 +41,19 @@
     </div>
 </nav>
 <!-- Seccion Presentacion -->
-<div class="px-4 py-5 my-5 pt-0 pe-0 text-center">
-    <img class="d-block mx-auto mb-4" src="assets/img/logo2.jpeg" alt="" width="107" height="107">
+<div class="px-4 my-5 pt-5 mt-0 text-center custom-bg">
+    <img class="d-block mx-auto mb-4" src="assets/img/logo2.png" alt="" width="150" height="150">
     <h1 class="display-5 text-body-emphasis title-font">Peces Exoticos</h1>
     <div class="col-lg-6 mx-auto">
         <p class="lead mb-4 body-light">Sumérgete en un mundo donde la belleza exótica de los peces se encuentra con la fuerza y disciplina de Esparta. Descubre especies únicas como el Betta "Leónidas" y el Tetra "Artemisa", cada uno con características y cuidados detallados. Nuestra interfaz, inspirada en la estética espartana, te guiará a través de la compra con facilidad. ¡Únete a las filas de AquaSparta y conquista tu propio imperio submarino!</p>
         <div class="d-grid gap-2 d-sm-flex justify-content-sm-center">
-            <a href="https://www.youtube.com/watch?v=j3hOd7u35no" target="_blank" ><button type="button" class="btn btn-primary btn-lg px-4 gap-3 button-principal">¡Compra Aquí!</button></a>
+            <a href="https://www.youtube.com/watch?v=j3hOd7u35no" target="_blank"><button type="button" class="btn btn-primary btn-lg px-4 gap-3 button-principal">¡Compra Aquí!</button></a>
             <button type="button" class="btn btn-outline-secondary btn-lg px-4">Preguntas Frecuentes</button>
         </div>
     </div>
 </div>
+
+
 
 <!-- Sección Inicio -->
 
@@ -105,35 +107,35 @@
 
 <!-- Sección Productos -->
 <section id="productos" class="container mt-5">
-    <h2 class="text-center mb-4">Nuestros Productos</h2>
+    <h2 class="text-center mb-4 title-font">Productos Destacados</h2>
     <div class="row">
         <div class="col-md-4">
             <div class="card">
-                <img src="https://via.placeholder.com/350x250" class="card-img-top" alt="Producto 1">
+                <img src="assets/img/pez1.jpeg" class="card-img-top" alt="Producto 1">
                 <div class="card-body">
-                    <h5 class="card-title">Pez Betta</h5>
-                    <p class="card-text">Descripción del Pez Betta.</p>
-                    <a href="#" class="btn btn-primary">Comprar</a>
+                    <h5 class="card-title">Betta "Leónidas"</h5>
+                    <p class="card-text">El rey de los bettas, con aletas que ondean como la capa de un general espartano. Su porte majestuoso y colores intensos evocan la valentía y el liderazgo de Leónidas en la batalla de las Termópilas.</p>
+                    <a href="#" class="btn btn-primary button-principal">Comprar</a>
                 </div>
             </div>
         </div>
         <div class="col-md-4">
             <div class="card">
-                <img src="https://via.placeholder.com/350x250" class="card-img-top" alt="Producto 2">
+                <img src="assets/img/pez2.jpeg" class="card-img-top" alt="Producto 2">
                 <div class="card-body">
-                    <h5 class="card-title">Pez Goldfish</h5>
-                    <p class="card-text">Descripción del Pez Goldfish.</p>
-                    <a href="#" class="btn btn-primary">Comprar</a>
+                    <h5 class="card-title">Tetra "Artemisa"</h5>
+                    <p class="card-text">Ágil y veloz como la diosa de la caza, este tetra deslumbra con sus escamas plateadas y movimientos rápidos. Su resistencia y adaptabilidad reflejan el espíritu de Artemisa, siempre lista para la acción.</p>
+                    <a href="#" class="btn btn-primary button-principal">Comprar</a>
                 </div>
             </div>
         </div>
         <div class="col-md-4">
             <div class="card">
-                <img src="https://via.placeholder.com/350x250" class="card-img-top" alt="Producto 3">
+                <img src="assets/img/pez3.jpeg" class="card-img-top" alt="Producto 3">
                 <div class="card-body">
-                    <h5 class="card-title">Pez Guppy</h5>
-                    <p class="card-text">Descripción del Pez Guppy.</p>
-                    <a href="#" class="btn btn-primary">Comprar</a>
+                    <h5 class="card-title">Cíclido "Agis"</h5>
+                    <p class="card-text">Un cíclido imponente, con una coraza de escamas doradas que recuerda a la armadura de un hoplita espartano. Su carácter territorial y protector refleja la disciplina y el honor de Agis.</p>
+                    <a href="#" class="btn btn-primary button-principal">Comprar</a>
                 </div>
             </div>
         </div>
@@ -142,43 +144,105 @@
 
 <!-- Sección Ofertas -->
 <section id="ofertas" class="container mt-5">
-    <h2 class="text-center mb-4">Ofertas Especiales</h2>
-    <!-- Aquí puedes añadir contenido adicional sobre ofertas -->
+    <h2 class="text-center mb-4 title-font">Ofertas Especiales</h2>
+    <div class="row" >
+        <div class="col-md-4 mb-4">
+            <div class="card">
+                <img src="assets/img/oferta1.jpeg" class="card-img-top" alt="Oferta 1">
+                <div class="card-body">
+                    <h5 class="card-title">Combo Guerrero Espartano</h5>
+                    <p class="card-text">Obtén un descuento del 20% al comprar un Betta "Leónidas", una decoración de escudo espartano y un paquete de alimento premium.</p>
+                    <a href="#" class="btn btn-primary button-principal">Comprar</a>
+                </div>
+            </div>
+        </div>
+        <div class="col-md-4 mb-4">
+            <div class="card">
+                <img src="assets/img/oferta2.jpeg" class="card-img-top" alt="Oferta 2">
+                <div class="card-body">
+                    <h5 class="card-title">Pecera de Lujo</h5>
+                    <p class="card-text">Adquiere una pecera de diseño espartano de última generación y llévate gratis un kit de accesorios y decoraciones, para dejar tu casa como un imperio.</p>
+                    <a href="#" class="btn btn-primary button-principal">Comprar</a>
+                </div>
+            </div>
+        </div>
+        <div class="col-md-4 mb-4">
+            <div class="card">
+                <img src="assets/img/oferta3.jpeg" class="card-img-top" alt="Oferta 3">
+                <div class="card-body">
+                    <h5 class="card-title">Súper Oferta de Fin de Temporada</h5>
+                    <p class="card-text">¡Liquidación de peces exóticos! Aprovecha el 30% de descuento en una selección de peces de colección.</p>
+                    <a href="#" class="btn btn-primary button-principal">Comprar</a>
+                </div>
+            </div>
+        </div>
+        <div class="col-md-4">
+            <div class="card">
+                <img src="assets/img/oferta4.jpeg" class="card-img-top" alt="Oferta 4">
+                <div class="card-body">
+                    <h5 class="card-title">Pack de Peces Olímpicos</h5>
+                    <p class="card-text">Lleva a casa un equipo de peces dignos de los dioses del Olimpo. Incluye un Betta "Leónidas", un Tetra "Artemisa" y un Cíclido "Agis" a un precio especial.</p>
+                    <a href="#" class="btn btn-primary button-principal">Comprar</a>
+                </div>
+            </div>
+        </div>
+        <div class="col-md-4">
+            <div class="card">
+                <img src="assets/img/oferta5.jpeg" class="card-img-top" alt="Oferta 5">
+                <div class="card-body">
+                    <h5 class="card-title">Decoración de Ruinas Espartanas</h5>
+                    <p class="card-text">Recrea el esplendor de las antiguas ruinas de Esparta en tu pecera con esta colección de decoraciones realistas y detalladas.</p>
+                    <a href="#" class="btn btn-primary button-principal">Comprar</a>
+                </div>
+            </div>
+        </div>
+        <div class="col-md-4">
+            <div class="card">
+                <img src="assets/img/oferta6.jpeg" class="card-img-top" alt="Oferta 6">
+                <div class="card-body">
+                    <h5 class="card-title">Suscripción de Alimento Premium</h5>
+                    <p class="card-text">Mantén a tus peces fuertes como guerreros espartanos con una suscripción trimestral de alimento premium a un precio especial.</p>
+                    <a href="#" class="btn btn-primary button-principal">Comprar</a>
+                </div>
+            </div>
+        </div>
+    </div>
 </section>
 
-<!-- Sección Testimonios -->
-<section id="testimonios" class="container mt-5">
-    <h2 class="text-center mb-4">Testimonios</h2>
-    <!-- Aquí puedes añadir contenido adicional sobre testimonios -->
-</section>
-
-<!-- Sección Contacto -->
-<section id="contacto" class="container mt-5">
-    <h2 class="text-center mb-4">Contáctanos</h2>
-    <form>
-        <div class="form-group">
-            <label for="nombre">Nombre</label>
-            <input type="text" class="form-control" id="nombre" placeholder="Nombre completo">
+<section class="container mt-5">
+    <div class="row">
+        <div class="col-md-7">
+            <h2 class="text-center mb-4 title-font">Testimonios</h2>
+            <!-- Contenido de la sección Testimonios -->
         </div>
-        <div class="form-group">
-            <label for="email">Correo electrónico</label>
-            <input type="email" class="form-control" id="email" placeholder="Correo electrónico">
+        <div class="col-md-5">
+            <h2 class="text-center mb-4 title-font">Contáctanos</h2>
+            <form>
+                <div class="form-group">
+                    <label for="nombre">Nombre</label>
+                    <input type="text" class="form-control" id="nombre" placeholder="Nombre completo">
+                </div>
+                <div class="form-group">
+                    <label for="email">Correo electrónico</label>
+                    <input type="email" class="form-control" id="email" placeholder="Correo electrónico">
+                </div>
+                <div class="form-group">
+                    <label for="telefono">Teléfono</label>
+                    <input type="tel" class="form-control" id="telefono" placeholder="Teléfono">
+                </div>
+                <div class="form-group">
+                    <label for="motivo">Motivo de contacto</label>
+                    <select class="form-control" id="motivo">
+                        <option>Consulta</option>
+                        <option>Reclamo</option>
+                        <option>Sugerencia</option>
+                    </select>
+                </div>
+                <button type="submit" class="btn btn-primary">Enviar</button>
+                <button type="reset" class="btn btn-secondary">Restablecer</button>
+            </form>
         </div>
-        <div class="form-group">
-            <label for="telefono">Teléfono</label>
-            <input type="tel" class="form-control" id="telefono" placeholder="Teléfono">
-        </div>
-        <div class="form-group">
-            <label for="motivo">Motivo de contacto</label>
-            <select class="form-control" id="motivo">
-                <option>Consulta</option>
-                <option>Reclamo</option>
-                <option>Sugerencia</option>
-            </select>
-        </div>
-        <button type="submit" class="btn btn-primary">Enviar</button>
-        <button type="reset" class="btn btn-secondary">Restablecer</button>
-    </form>
+    </div>
 </section>
 
 <!-- Pie de página -->
