aquasparta: Fix bugs

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             <li class="nav-item ms-3 my-auto"><a class="nav-link" href="#ofertas">Ofertas</a></li>
             <li class="nav-item ms-3 my-auto"><a class="nav-link" href="#ofertas">Ofertas</a></li>
             <li class="nav-item ms-3 my-auto"><a class="nav-link" href="#testimonios">Testimonios</a></li>
-            <li class="nav-item ms-3 my-auto"><a class="nav-link" href="#contacto">Contacto</a></li>
+            <li class="nav-item ms-3 my-auto"><a class="nav-link" href="#contactos">Contacto</a></li>
         </ul>
     </div>
 </nav>
@@ -212,7 +212,7 @@
 <section class="container mt-5">
     <div class="row">
         <div class="col-md-7">
-            <h2 class="text-center mb-4 title-font">Testimonios</h2>
+            <h2 class="text-center mb-4 title-font" id="testimonios">Testimonios</h2>
             <div class="alert alert-success" role="alert">
                 "¡Un festín digno del Olimpo! Mis invitados quedaron asombrados." - Dionisio
             </div>
@@ -227,7 +227,7 @@
             </div>
         </div>
         <div class="col-md-5">
-            <h2 class="text-center mb-4 title-font">Contáctanos</h2>
+            <h2 class="text-center mb-4 title-font" id="contactos">Contáctanos</h2>
             <form>
                 <div class="form-group">
                     <label for="nombre">Nombre</label>
