--- a/index.html
+++ b/index.html
@@ -46,13 +46,11 @@
     <div class="col-lg-6 mx-auto">
         <p class="lead mb-4 body-light">Sumérgete en un mundo donde la belleza exótica de los peces se encuentra con la fuerza y disciplina de Esparta. Descubre especies únicas como el Betta "Leónidas" y el Tetra "Artemisa", cada uno con características y cuidados detallados. Nuestra interfaz, inspirada en la estética espartana, te guiará a través de la compra con facilidad. ¡Únete a las filas de AquaSparta y conquista tu propio imperio submarino!</p>
         <div class="d-grid gap-2 d-sm-flex justify-content-sm-center">
-            <a href="https://www.youtube.com/watch?v=j3hOd7u35no" target="_blank"><button type="button" class="btn btn-primary btn-lg px-4 gap-3 button-principal">¡Compra Aquí!</button></a>
+            <a href="https://www.youtube.com/watch?v=6DTWH9kYAiY" target="_blank"><button type="button" class="btn btn-primary btn-lg px-4 gap-3 button-principal">¡Compra Aquí!</button></a>
             <button type="button" class="btn btn-outline-secondary btn-lg px-4">Preguntas Frecuentes</button>
         </div>
     </div>
 </div>
-
-
 
 <!-- Sección Inicio -->
 
@@ -108,7 +106,7 @@
 <section id="productos" class="container mt-5">
     <h2 class="text-center mb-4 title-font">Productos Destacados</h2>
     <div class="row">
-        <div class="col-md-4">
+        <div class="col-md-4 mb-4">
             <div class="card">
                 <img src="assets/img/pez1.jpeg" class="card-img-top" alt="Producto 1">
                 <div class="card-body">
@@ -118,7 +116,7 @@
                 </div>
             </div>
         </div>
-        <div class="col-md-4">
+        <div class="col-md-4 mb-4">
             <div class="card">
                 <img src="assets/img/pez2.jpeg" class="card-img-top" alt="Producto 2">
                 <div class="card-body">
@@ -128,7 +126,7 @@
                 </div>
             </div>
         </div>
-        <div class="col-md-4">
+        <div class="col-md-4 mb-4">
             <div class="card">
                 <img src="assets/img/pez3.jpeg" class="card-img-top" alt="Producto 3">
                 <div class="card-body">
@@ -175,7 +173,7 @@
                 </div>
             </div>
         </div>
-        <div class="col-md-4">
+        <div class="col-md-4 mb-4">
             <div class="card">
                 <img src="assets/img/oferta4.jpeg" class="card-img-top" alt="Oferta 4">
                 <div class="card-body">
@@ -185,7 +183,7 @@
                 </div>
             </div>
         </div>
-        <div class="col-md-4">
+        <div class="col-md-4 mb-4">
             <div class="card">
                 <img src="assets/img/oferta5.jpeg" class="card-img-top" alt="Oferta 5">
                 <div class="card-body">
@@ -195,7 +193,7 @@
                 </div>
             </div>
         </div>
-        <div class="col-md-4">
+        <div class="col-md-4 mb-4">
             <div class="card">
                 <img src="assets/img/oferta6.jpeg" class="card-img-top" alt="Oferta 6">
                 <div class="card-body">
