aquasparta: Add padding to button on mobile

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <img src="assets/img/logo_page.jpeg" alt="Logo" class="d-inline-block align-top ms-3 rounded-circle" height="50">
     </a>
     <h1 class="fs-5 title-color my-auto">AquaSparta</h1>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+    <button class="navbar-toggler me-3" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarNav">
